--- a/SweetSerenityBySarah/Views/Partials/Master/MainNavigation.cshtml
+++ b/SweetSerenityBySarah/Views/Partials/Master/MainNavigation.cshtml
@@ -1,7 +1,7 @@
 ﻿@inherits UmbracoTemplatePage
 @{
     var siteDefaultName = "Sweet Serenity by Sarah ";
-    var siteEmailAddress = "support@sweetserenitybysarah.com";
+    var siteEmailAddress = "admin@sweetserenitybysarah.com.au";
     var sitePhoneNumber = "";
     var siteLogo = "/Images/Sweet-Serenity-By-Sarah-Logo-1.png";
     var siteSetting = Umbraco.TypedContentAtRoot().FirstOrDefault(x => x.ContentType.Alias == "GlobalSettings");
