--- a/SweetSerenityBySarah/Views/Partials/Master/SiteFooter.cshtml
+++ b/SweetSerenityBySarah/Views/Partials/Master/SiteFooter.cshtml
@@ -14,51 +14,62 @@
             <footer>
                 <div class="container">
                     <div class="row">
-                        <div class="col-sm12 col-md-4">
+                        <div class="col-sm12 col-md-3">
                             <p>
                                 Copyright &copy; @siteDefaultName @DateTime.Now.Year
                             </p>
                         </div>
-                        <div class="col-sm12 col-md-4 text-center">
+                        <div class="col-sm12 col-md-3 text-center">
                             @if (siteSetting.Descendants("SocialLinksContainer").Any())
-                                {
+                            {
                                 var socialLinksParentPage = siteSetting.Descendants("SocialLinksContainer").FirstOrDefault();
                                 if (socialLinksParentPage != null && socialLinksParentPage.Id > 0 && siteSetting.Descendants("SocialLink").Any())
-                                    {
+                                {
                                     var socialLinks = siteSetting.Descendants("SocialLink");
                                     <ul class="list-inline social-buttons">
                                         @foreach (var link in socialLinks)
-                                            {
+                                        {
                                             var linkName = link.Name;
                                             if (link.HasProperty("linkTitle") && link.HasValue("linkTitle"))
-                                                {
+                                            {
                                                 linkName = link.GetPropertyValue("linkTitle").ToString();
-                                                }
+                                            }
                                             var linkIcon = "";
                                             if (link.HasProperty("faIcon") && link.HasValue("faIcon"))
-                                                {
+                                            {
                                                 linkIcon = link.GetPropertyValue("faIcon").ToString();
-                                                }
+                                            }
                                             var linkUrl = "";
                                             if (link.HasProperty("linkUrl") && link.HasValue("linkUrl"))
-                                                {
+                                            {
                                                 linkUrl = link.GetPropertyValue("linkUrl").ToString();
-                                                }
+                                            }
 
                                             if (!string.IsNullOrEmpty(linkIcon) && !string.IsNullOrEmpty(linkUrl))
-                                                {
+                                            {
                                                 <li>
                                                     <a href="@linkUrl" target="_blank" title="Follow us on @linkName" class="socialIcons">
                                                         <i class="fa @linkIcon "></i>
                                                     </a>
                                                 </li>
-                                                }
                                             }
+                                        }
                                     </ul>
-                                    }
                                 }
+                            }
                         </div>
-                        <div class="col-sm12 col-md-4">
+                        <div class="col-sm12 col-md-3">
+                            @* geo trust logo *@
+                            <table width="135" border="0" cellpadding="2" cellspacing="0" title="Click to Verify - This site chose GeoTrust SSL for secure e-commerce and confidential communications.">
+                                <tr>
+                                    <td width="135" align="center" valign="top">
+                                        <script type="text/javascript" src="https://seal.geotrust.com/getgeotrustsslseal?host_name=sweetserenitybysarah.com.au&amp;size=M&amp;lang=en"></script><br />
+                                        <a href="http://www.geotrust.com/ssl/" target="_blank" style="color:#000000; text-decoration:none; font:bold 7px verdana,sans-serif; letter-spacing:.5px; text-align:center; margin:0px; padding:0px;"></a>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="col-sm12 col-md-3">
                             <p>
                                 <a href="http://rdmonline.co.uk/" title="RDM Online" target="_blank">
                                     Website Crafted By RDM Online
